--- a/Project/public/assets/css/main.css
+++ b/Project/public/assets/css/main.css
@@ -200,3 +200,71 @@
     float: right;
     padding-left: 100px;
 }
+.maincontent .dashboardcontainer{
+    height: 200px;
+    width: 99%;
+    padding: 10px;
+    color: white;
+}
+.maincontent .dashboardcontainer .totalunits, .totaltenants, .totaldue{
+    background-color: rgb(31, 99, 152, 1.0);
+}
+
+.maincontent .dashboardcontainer .totalunits{
+    border: solid 1px black;
+    height: 230px;
+    width: 300px;
+    float: left;
+    box-sizing: border-box;
+    margin-right: 32px; 
+    position: relative;
+}
+.maincontent .dashboardcontainer .totaltenants{
+    border: solid 1px black;
+    height: 230px;
+    width: 300px;
+    float: left;
+    box-sizing: border-box;
+    margin-right: 32px;
+    position: relative;
+}
+.maincontent .dashboardcontainer .totaldue{
+    border: solid 1px black;
+    height: 230px;
+    width: 300px;
+    float: left;
+    box-sizing: border-box;
+    margin-right: 32px;
+    position: relative;
+}
+.maincontent .dashboardcontainer .container .containerbtn{
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+}
+.maincontent .dashboardcontainer .Viewbtn{
+    text-decoration: none;
+}
+.maincontent .dashboardcontainer .Viewbtn input[type=submit]{
+    background-color:   rgb(2, 48, 71, 1.0);
+    width: 100%;
+    height: 45px;
+    color: white;
+    border: solid 2px white;
+    font-size: 16px;
+    cursor: pointer;
+}
+.maincontent .dashboardcontainer .Viewbtn input[type=submit]:hover{
+    background-color:   rgb(230, 172, 28, 1.0);
+    border: solid 2px black;
+}
+.maincontent .dashboardcontainer .container .totalunits,.totaltenants,.totaldue label{
+    font-size: 25px;
+}
+.maincontent .dashboardcontainer .container .num{
+    font-size:  35px;
+    padding-left: 10px;
+}
+.maincontent .dashboardcontainer .container .textdash{
+    padding: 20px;
+}
