--- a/Project/public/assets/css/login.css
+++ b/Project/public/assets/css/login.css
@@ -10,6 +10,7 @@ body{
   text-align: center;
   padding: 70px 0;
   border-radius: 50px;
+  background-color: rgb(2, 48, 71, 1.0);
 }
 .userdiv input[type=text]{
   width: 80%;
@@ -38,4 +39,10 @@ body{
   border-radius: 40px;
   text-align: center;
   box-shadow: 0 6px 20px -5px 
+}
+.displaywrong{
+  color: red;
+}
+.title{
+  color: white;
 }
