--- a/Project/public/assets/css/main.css
+++ b/Project/public/assets/css/main.css
@@ -12,7 +12,7 @@
 
 }
 .sidebarlogo{
-	border: solid 1px white;
+	
 	height: 200px;
 	width: 100%;
 }
@@ -23,7 +23,7 @@
 }
 .sidebarmenu{
 	text-align: center;
-	border: solid 1px white;
+	
 }
 .sidebarmenu a, input[type=button]{
 	text-decoration: none;
@@ -168,8 +168,35 @@
     height: 30px;
     border-radius: 40px;
     cursor: pointer;
+    text-decoration: none;
 }
 .maincontent .backbtn input[type=submit]:hover{
+    background-color: rgb(2, 48, 71, 1.0);
+    color: white;
+}
+.maincontent .backbtnplain input[type=submit]{
+    background-color: rgb(230, 172, 28, 1.0);
+    width: 110px;
+    height: 30px;
+    border-radius: 40px;
+    cursor: pointer;
+    text-decoration: none;
+}
+.maincontent .backbtnplain input[type=submit]:hover{
+    background-color: rgb(2, 48, 71, 1.0);
+    color: white;
+}
+.maincontent .backbtnplain .back a{
+    border: solid 1px black;
+    border-radius: 40px;
+    padding: 8px 20px;
+    cursor: pointer;
+    text-decoration: none; 
+    color: black;
+    font-size: 15px;
+    background-color: rgb(230, 172, 28, 1.0); 
+}
+.maincontent .backbtnplain a:hover{
     background-color: rgb(2, 48, 71, 1.0);
     color: white;
 }
